NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Picking_Location_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Picking_Location_Number__c</fullName>
    <description>Picking Location Number</description>
    <inlineHelpText>Picking Location Number</inlineHelpText>
    <label>Picking Location Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>