NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Picklist_Packing_Slip__c.field-meta.xml
<CustomField>
    <fullName>NATT_Picklist_Packing_Slip__c</fullName>
    <description>Picklist / Packing Slip #</description>
    <inlineHelpText>Picklist / Packing Slip #</inlineHelpText>
    <label>Picklist / Packing Slip #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>