NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Priority_for_Unit_Download_Review__c.field-meta.xml
<CustomField>
    <fullName>NATT_Priority_for_Unit_Download_Review__c</fullName>
    <inlineHelpText>If priority “high” or “critical”, provide justification (free text field but required. Examples would be load loss, potential load loss)</inlineHelpText>
    <label>(deprecated) Priority for Download Rev</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>