NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Product_Line_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Line_2__c</fullName>
    <formula>Text(Account.NATT_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>