NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck Trailer Dealer</fullName>
                <default>true</default>
                <label>Truck Trailer Dealer</label>
            </value>
            <value>
                <fullName>Container Dealer</fullName>
            </value>
            <value>
                <fullName>Marine Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>