NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Purchase_Order__c</fullName>
    <formula>NATT_Order_Number__r.NATT_Purchase_Order__c</formula>
    <label>Purchase Order</label>
    <type>Text</type>
</CustomField>