NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Serial_Number__c</fullName>
    <description>Serial Number</description>
    <inlineHelpText>Serial Number</inlineHelpText>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>