NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Routing</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Yellow Freight</fullName>
            </value>
            <value>
                <fullName>Roadway</fullName>
            </value>
            <value>
                <fullName>SEFL</fullName>
            </value>
            <value>
                <fullName>SAIA</fullName>
            </value>
            <value>
                <fullName>ABF Freight</fullName>
            </value>
            <value>
                <fullName>Bestway</fullName>
                <isActive>false</isActive>
                <label>Bestway</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>