NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Supplier_Credit_Auth_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Supplier_Credit_Auth_Number__c</fullName>
    <label>Supplier Credit Authorization Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>