NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Tracking_1_B_L__c.field-meta.xml
<CustomField>
    <fullName>NATT_Tracking_1_B_L__c</fullName>
    <label>Tracking #1 (B/L)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>