NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Troubleshooting_Completed__c.field-meta.xml
<CustomField>
    <fullName>NATT_Troubleshooting_Completed__c</fullName>
    <inlineHelpText>What troubleshooting has already been carried out?</inlineHelpText>
    <label>Troubleshooting Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>