NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Unit_Download_Priority_Just__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Download_Priority_Just__c</fullName>
    <label>Unit Download Priority Justification</label>
    <type>TextArea</type>
</CustomField>