NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Unit_Performance_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Performance_Description__c</fullName>
    <inlineHelpText>Description of what the Unit is doing</inlineHelpText>
    <label>Unit Performance Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>