NATTQA-ENV/force-app/main/default/objects/Case/fields/NPS_Account__c.field-meta.xml
<CustomField>
    <fullName>NPS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Customer Account)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>