NATTQA-ENV/force-app/main/default/objects/Case/fields/nps_AlertID__c.field-meta.xml
<CustomField>
    <fullName>nps_AlertID__c</fullName>
    <label>NPS - Alert ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>