NATTQA-ENV/force-app/main/default/objects/Case/fields/NPS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>