NATTQA-ENV/force-app/main/default/objects/Case/fields/NPS_Likelihood_to_recommend__c.field-meta.xml
<CustomField>
    <fullName>NPS_Likelihood_to_recommend__c</fullName>
    <formula>nps_NPS_Feedback_id__r.nps_Likelihood_to_recommend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Likelihood to recommend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>