NATTQA-ENV/force-app/main/default/objects/Case/fields/NPS_Likelihood_to_recommend_NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS_Likelihood_to_recommend_NPS__c</fullName>
    <formula>TEXT(nps_NPS_Feedback_id__r.nps_Likelihood_to_recommend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Likelihood to recommend NPS</label>
    <type>Text</type>
</CustomField>