NATTQA-ENV/force-app/main/default/objects/Case/fields/nps_NPS_Feedback_id__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_Feedback_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS - Feedback id</label>
    <referenceTo>nps_Feedback__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>