NATTQA-ENV/force-app/main/default/objects/Case/fields/nps_NPS_internal_id__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_internal_id__c</fullName>
    <label>NPS internal id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>