NATTQA-ENV/force-app/main/default/objects/Case/fields/nps_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>nps_Ticket_Number__c</fullName>
    <externalId>true</externalId>
    <label>Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>