NATTQA-ENV/force-app/main/default/objects/Case/fields/Odometer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Hours__c</fullName>
    <label>Odometer Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>