NATTQA-ENV/force-app/main/default/objects/Case/fields/Part_No_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Part_No_Serial_No__c</fullName>
    <description>Part No./Serial No.</description>
    <inlineHelpText>Part No./Serial No.</inlineHelpText>
    <label>Part No./Serial No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>