NATTQA-ENV/force-app/main/default/objects/Case/fields/Pending_Time_Post_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Pending_Time_Post_Assignment__c</fullName>
    <label>Pending Time Post Assignment</label>
    <type>Time</type>
</CustomField>