NATTQA-ENV/force-app/main/default/objects/Case/fields/Related_Document_Folio__c.field-meta.xml
<CustomField>
    <fullName>Related_Document_Folio__c</fullName>
    <label>Related Document Folio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>