NATTQA-ENV/force-app/main/default/objects/Case/fields/Request_to_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Request_to_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Engine Authorization Requests and Unit Downloads need to be revised occasionally after a Case is Closed.  This Checkbox is used to ask for permission to make adjustments.</description>
    <inlineHelpText>Indicates that changes need to be made to a closed Case.</inlineHelpText>
    <label>Request to Reopen</label>
    <type>Checkbox</type>
</CustomField>