NATTQA-ENV/force-app/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This should be for all users under Container Service as all users can create a case</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>