NATTQA-ENV/force-app/main/default/objects/Case/fields/Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Status_Update__c</fullName>
    <label>Status Update</label>
    <type>TextArea</type>
</CustomField>