NATTQA-ENV/force-app/main/default/objects/Case/fields/Status_Update_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Description__c</fullName>
    <label>Status Update Description</label>
    <type>TextArea</type>
</CustomField>