NATTQA-ENV/force-app/main/default/objects/Case/fields/Suggested_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Price__c</fullName>
    <label>Suggested Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>