NATTQA-ENV/force-app/main/default/objects/Case/fields/TS_Agent_Department__c.field-meta.xml
<CustomField>
    <fullName>TS_Agent_Department__c</fullName>
    <label>TS Agent Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>Aftermarket Region Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>