NATTQA-ENV/force-app/main/default/objects/Case/fields/TS_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>TS_Agent_Name__c</fullName>
    <label>TS Agent Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>