NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/Container_Aftermarket_Parts.recordType-meta.xml
<RecordType>
    <fullName>Container_Aftermarket_Parts</fullName>
    <active>true</active>
    <businessProcess>Container Aftermarket Parts</businessProcess>
    <description>For Container users to create cases associated with after market parts</description>
    <label>Container Division</label>
</RecordType>