NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CONTAINER_Service_Engineering_Field_Service.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_Service_Engineering_Field_Service</fullName>
    <active>true</active>
    <businessProcess>CONTAINER Service Engineering</businessProcess>
    <description>Record Type for CONTAINER Service Engineering</description>
    <label>CONTAINER Service Engineering</label>
</RecordType>