NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Container.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Container</fullName>
    <active>true</active>
    <businessProcess>CTBR Container</businessProcess>
    <description>Record Type for CTBR Container cases</description>
    <label>CTBR Container</label>
</RecordType>