NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>CBTR Logistica</businessProcess>
    <description>Tipo de registro para casos de CBTR Logistica</description>
    <label>CTBR Logistica</label>
</RecordType>