NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Finance.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Finance</fullName>
    <active>true</active>
    <businessProcess>CTBR Finance</businessProcess>
    <description>Record Type for CTBR Finance cases</description>
    <label>CTBR Finance</label>
</RecordType>