NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_IT.recordType-meta.xml
<RecordType>
    <fullName>CTBR_IT</fullName>
    <active>true</active>
    <businessProcess>CTBR IT</businessProcess>
    <description>Tipo de registro para casos de CTBR IT</description>
    <label>CTBR IT</label>
</RecordType>