NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Lynx_Fleet.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Lynx_Fleet</fullName>
    <active>true</active>
    <businessProcess>CTBR Lynx Fleet</businessProcess>
    <description>Record Type for CTBR Lynx Fleet cases</description>
    <label>CTBR Lynx Fleet</label>
</RecordType>