NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Parts_T_T.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Parts_T_T</fullName>
    <active>true</active>
    <businessProcess>CTBR Parts T%26T</businessProcess>
    <description>Record Type for CTBR Parts T&amp;T cases</description>
    <label>CTBR Parts T&amp;T</label>
</RecordType>