NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Unit_Sales.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Unit_Sales</fullName>
    <active>true</active>
    <businessProcess>CTBR Unit Sales</businessProcess>
    <description>Record Type for CTBR Unit Sales cases</description>
    <label>CTBR Unit Sales</label>
</RecordType>