NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Warehouse.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Warehouse</fullName>
    <active>true</active>
    <businessProcess>CTBR Warehouse</businessProcess>
    <description>Tipo de registro para casos de CTBR Armazém GO</description>
    <label>CTBR Warehouse GO</label>
</RecordType>