NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Warehouse_RS.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Warehouse_RS</fullName>
    <active>true</active>
    <businessProcess>CTBR Warehouse</businessProcess>
    <description>Tipo de registro para casos de CTBR Armazém RS</description>
    <label>CTBR Warehouse RS</label>
</RecordType>