NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTBR_Warranty.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Warranty</fullName>
    <active>true</active>
    <businessProcess>CTBR Warranty</businessProcess>
    <description>Record Type for CTBR Warranty cases</description>
    <label>CTBR Warranty</label>
</RecordType>