NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>CTM_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>CTM Customer Service</businessProcess>
    <description>Record Type for CTM Customer Service cases</description>
    <label>CTM Customer Service</label>
</RecordType>