NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_eSolutions.recordType-meta.xml
<RecordType>
    <fullName>CTM_eSolutions</fullName>
    <active>true</active>
    <businessProcess>CTM eSolutions</businessProcess>
    <description>Record Type for CTM eSolutions cases</description>
    <label>CTM eSolutions</label>
</RecordType>