NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Finance.recordType-meta.xml
<RecordType>
    <fullName>CTM_Finance</fullName>
    <active>true</active>
    <businessProcess>CTM Finance</businessProcess>
    <description>Record Type for CTM Finance cases</description>
    <label>CTM Finance</label>
</RecordType>