NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Performance_Parts.recordType-meta.xml
<RecordType>
    <fullName>CTM_Performance_Parts</fullName>
    <active>true</active>
    <businessProcess>CTM Performance Parts</businessProcess>
    <description>Record Type for CTM Performance Parts cases</description>
    <label>CTM Performance Parts</label>
</RecordType>