NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Service_Engineering_Field_Service.recordType-meta.xml
<RecordType>
    <fullName>CTM_Service_Engineering_Field_Service</fullName>
    <active>true</active>
    <businessProcess>CTM Service Engineering Field Service</businessProcess>
    <description>Record Type for CTM Service Engineering Field Service cases</description>
    <label>CTM Service Engineering Field Service</label>
</RecordType>