NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Unit_Sales.recordType-meta.xml
<RecordType>
    <fullName>CTM_Unit_Sales</fullName>
    <active>true</active>
    <businessProcess>CTM Unit Sales</businessProcess>
    <description>Record Type for CTM Unit Sales cases</description>
    <label>CTM Unit Sales</label>
</RecordType>