NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/CTM_Warranty.recordType-meta.xml
<RecordType>
    <fullName>CTM_Warranty</fullName>
    <active>true</active>
    <businessProcess>CTM Warranty</businessProcess>
    <description>Record Type for CTM Warranty cases</description>
    <label>CTM Warranty</label>
</RecordType>