NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/Customer_Survey_Index.recordType-meta.xml
<RecordType>
    <fullName>Customer_Survey_Index</fullName>
    <active>true</active>
    <businessProcess>Email</businessProcess>
    <label>Customer Survey Index</label>
</RecordType>