NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/nac_core_returns.recordType-meta.xml
<RecordType>
    <fullName>nac_core_returns</fullName>
    <active>true</active>
    <businessProcess>Performance Parts</businessProcess>
    <label>NAOCAP Core Return</label>
</RecordType>