NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NAC_Performance_Parts.recordType-meta.xml
<RecordType>
    <fullName>NAC_Performance_Parts</fullName>
    <active>true</active>
    <businessProcess>Performance Parts</businessProcess>
    <label>NAOCAP Aftermarket Part</label>
</RecordType>