NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_Application_Engineering.recordType-meta.xml
<RecordType>
    <fullName>NATT_Application_Engineering</fullName>
    <active>false</active>
    <businessProcess>Application Engineering</businessProcess>
    <description>Record Type for Application Engineering cases</description>
    <label>Application Engineering</label>
</RecordType>