NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_BluEdge_Warranty.recordType-meta.xml
<RecordType>
    <fullName>NATT_BluEdge_Warranty</fullName>
    <active>true</active>
    <businessProcess>BluEdge and Warranty</businessProcess>
    <description>Record Type for BluEdge and Warranty cases</description>
    <label>BluEdge / Warranty</label>
</RecordType>