NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_Core_Returns.recordType-meta.xml
<RecordType>
    <fullName>NATT_Core_Returns</fullName>
    <active>true</active>
    <businessProcess>Performance Parts</businessProcess>
    <description>NATT Process for managing Core Returns</description>
    <label>Core Returns</label>
</RecordType>