NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_eSolutions.recordType-meta.xml
<RecordType>
    <fullName>NATT_eSolutions</fullName>
    <active>true</active>
    <businessProcess>eSolutions</businessProcess>
    <description>Record type for NATT Lynx Fleet</description>
    <label>Lynx Fleet</label>
</RecordType>