NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_Performance_Parts.recordType-meta.xml
<RecordType>
    <fullName>NATT_Performance_Parts</fullName>
    <active>true</active>
    <businessProcess>Performance Parts</businessProcess>
    <description>Record type for Performance Parts</description>
    <label>Performance Parts</label>
</RecordType>