NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_Service_Engineering_Field_Service.recordType-meta.xml
<RecordType>
    <fullName>NATT_Service_Engineering_Field_Service</fullName>
    <active>true</active>
    <businessProcess>Service Engineering and Field Service</businessProcess>
    <description>Record Type for Service Engineering and Field Service</description>
    <label>Service Engineering / Field Service</label>
</RecordType>