NATTQA-ENV/force-app/main/default/objects/Case/recordTypes/NATT_Unit_Sales.recordType-meta.xml
<RecordType>
    <fullName>NATT_Unit_Sales</fullName>
    <active>false</active>
    <businessProcess>Unit Sales</businessProcess>
    <description>Record type for Unit sales(Case)</description>
    <label>Unit Sales</label>
</RecordType>