NATTQA-ENV/force-app/main/default/objects/Case/validationRules/Closed_Reason_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Reason_Rule</fullName>
    <active>false</active>
    <description>This will trigger when status is closed</description>
    <errorConditionFormula>AND
($RecordType.Name = &quot;Application Engineering&quot;,
 ISPICKVAL(Status, &quot;Closed&quot;),
 ISBLANK(TEXT(NATT_Close_Reason__c ))
)</errorConditionFormula>
    <errorMessage>You need to select the reason for closing the case</errorMessage>
</ValidationRule>