NATTQA-ENV/force-app/main/default/objects/Case/validationRules/CONTAINER_Case_Reason_Explanation.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Case_Reason_Explanation</fullName>
    <active>true</active>
    <description>Case reason explanation Field MUST not be blank when status is closed.</description>
    <errorConditionFormula>AND(
(
$RecordType.Name = &quot;CONTAINER Service Engineering&quot;),
ISPICKVAL(Status, &quot;Closed&quot;),
ISBLANK(NATT_Close_Reason_Explanation__c),
NOT( $Permission.CONTAINER_Bypass_Validation_Rule )
)</errorConditionFormula>
    <errorMessage>Please provide close reason explanation.</errorMessage>
</ValidationRule>