NATTQA-ENV/force-app/main/default/objects/Case/validationRules/CONTAINER_Closed_Reason_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_Closed_Reason_Rule</fullName>
    <active>false</active>
    <description>This will trigger when status is closed</description>
    <errorConditionFormula>AND
($RecordType.Name = &quot;CONTAINER Service Engineering / Field Service&quot;,
 ISPICKVAL(Status, &quot;Closed&quot;),
 ISBLANK(TEXT(NATT_Close_Reason__c )),
 NOT( $Permission.CONTAINER_Bypass_Validation_Rule )
)</errorConditionFormula>
    <errorMessage>You need to select the reason for closing the case</errorMessage>
</ValidationRule>