NATTQA-ENV/force-app/main/default/objects/Case/validationRules/CONTAINER_No_Change_after_Case_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_No_Change_after_Case_Closed</fullName>
    <active>true</active>
    <description>User should not allowed to Edit the Case record once its closed.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
$RecordType.Name = &quot;CONTAINER Service Engineering&quot;,
ISPICKVAL(PRIORVALUE(Status),&quot;Closed&quot;),
NOT( $Permission.CONTAINER_Bypass_Validation_Rule )  
)</errorConditionFormula>
    <errorMessage>Case status cannot be changed for a closed case.</errorMessage>
</ValidationRule>